-- Some PMD errors removed + code formatter applied.
SVN-Revision: 10518